--- a/analysis/00_all-code.Rmd
+++ b/analysis/00_all-code.Rmd
@@ -15,14 +15,16 @@ library(tidyverse)
 library(here)
 library(patchwork)
 ```
+
 ## Import data 
 ```{r import-data}
-water_quality_raw <- read_csv(here("data", "water_quality.csv"))
+water_chem_raw <- read_csv(here("data", "water_chemistry.csv"))
 plankton_raw <- read_csv(here("data", "plankton.csv"))
 ```
+
 ### Control for MDLs 
 ```{r mdls}
-water_quality_clean <- water_quality_raw %>% 
+water_chem_clean <- water_chem_raw %>% 
   mutate(
     srp_mgl = ifelse(srp_mgl <= 0.002, 0.002, srp_mgl),
     tp_mgl = ifelse(tp_mgl <= 0.002, 0.002, tp_mgl),
@@ -39,7 +41,7 @@ error_calc <- function(x){
   abs(x - lag(x))
 } 
 
-water_quality_error <- water_quality_clean %>% 
+water_chem_error <- water_chem_clean %>% 
   group_by(depth) %>% 
   mutate(across(temp_c:chla_ugl, error_calc)) %>% 
   ungroup(depth) %>% 
@@ -50,7 +52,7 @@ water_quality_error <- water_quality_clean %>%
 
 ### Average values 
 ```{r avg-depths}
-water_quality_clean <- water_quality_clean %>% 
+water_chem_clean <- water_chem_clean %>% 
   group_by(depth) %>% 
   summarize(across(temp_c:chla_ugl, mean, na.rm = TRUE))
 ```
@@ -64,8 +66,8 @@ get_orgn <- function(tn_mgL, no3_mgL, nh3_mgL){
 }
 
 # Apply function to df 
-water_quality_clean <- water_quality_clean %>% 
-  mutate(org_n_mgl = round(get_orgn(tn_mgl, no3_mgl, nh3_mgl), 3))
+water_chem_clean <- water_chem_clean %>% 
+  mutate(orgn_mgl = round(get_orgn(tn_mgl, no3_mgl, nh3_mgl), 3))
 ```
 
 ### Percent Light Level 
@@ -78,7 +80,7 @@ get_percent_light <- function(light_at_depth, light_at_surface){
 }
 
 # Apply to data 
-water_quality_clean <- water_quality_clean %>% 
+water_chem_clean <- water_chem_clean %>% 
   mutate(
     light_level_per = get_percent_light(light_dep_mmol, light_sur_mmol)
   )
@@ -111,12 +113,12 @@ get_one_percent <- function(depths, light){
 }
 
 # Apply to data 
-one_percent_light <- round(get_one_percent(water_quality_clean$depth, water_quality_clean$light_dep_mmol), 1)
+one_percent_light <- round(get_one_percent(water_chem_clean$depth, water_chem_clean$light_dep_mmol), 1)
 ```
 
 ### Sig Figs 
 ```{r}
-water_quality_clean <- water_quality_clean %>% 
+water_chem_clean <- water_chem_clean %>% 
   mutate(
     temp_c = round(temp_c, 2), 
     do_mgl = round(do_mgl, 2),
@@ -133,14 +135,14 @@ water_quality_clean <- water_quality_clean %>%
     no3_mgl = round(no3_mgl, 3),
     tn_mgl = round(tn_mgl, 3),
     chla_ugl = round(chla_ugl, 2),
-    org_n_mgl = round(org_n_mgl, 3),
+    orgn_mgl = round(orgn_mgl, 3),
     light_level_per = round(light_level_per, 1)
   )
 ```
 
 ### Combine with error values 
 ```{r join-error}
-water_quality_clean <- water_quality_clean %>% left_join(water_quality_error, by = c("depth"))
+water_chem_clean <- water_chem_clean %>% left_join(water_chem_error, by = c("depth"))
 ```
 
 ### Secchi 
@@ -208,7 +210,7 @@ zoops <- plankton_summary %>%
 ### Figure 1 - Temp, DO, Turb, DO SAT 
 ```{r fig-1}
 # Temp subplot
-p_temp <- water_quality_clean %>% 
+p_temp <- water_chem_clean %>% 
   ggplot(aes(x = temp_c, y = depth)) +
   geom_point(size = 1.5) + 
   geom_path(size = 0.75) + 
@@ -220,7 +222,7 @@ p_temp <- water_quality_clean %>%
   scale_x_continuous(name = "Temperature (°C)")
 
 # DO subplot 
-p_do <- water_quality_clean %>% 
+p_do <- water_chem_clean %>% 
   ggplot(aes(x = do_mgl, y = depth)) +
   geom_point(size = 1.5) + 
   geom_path(size = 0.75) + 
@@ -232,7 +234,7 @@ p_do <- water_quality_clean %>%
   scale_x_continuous(name = "Dissolved Oxygen (mg/L)", breaks = seq(0, 16, 4))
 
 # Turb subplot 
-p_turb <- water_quality_clean %>% 
+p_turb <- water_chem_clean %>% 
   ggplot(aes(x = turb_ntu, y = depth)) +
   geom_point(size = 1.5) + 
   geom_path(size = 0.75) + 
@@ -242,7 +244,7 @@ p_turb <- water_quality_clean %>%
   scale_x_continuous(name = "Turbidity (NTU)", breaks = seq(10, 40, 5))
 
 # DO SAT subplot 
-p_dosat <- water_quality_clean %>% 
+p_dosat <- water_chem_clean %>% 
   ggplot(aes(x = do_sat_per, y = depth)) +
   geom_point(size = 1.5) + 
   geom_path(size = 0.75) + 
@@ -269,7 +271,7 @@ ggsave(plot1, file = "figure1.png", device = "png", type = "cairo")
 
 ### Figure 2 - Temp, Alk, Cond, pH
 ```{r fig-2}
-p_alk <- water_quality_clean %>% 
+p_alk <- water_chem_clean %>% 
   ggplot(aes(x = alk_mgl, y = depth)) +
   geom_point(size = 1.5) + 
   geom_path(size = 0.75) + 
@@ -280,7 +282,7 @@ p_alk <- water_quality_clean %>%
   scale_y_reverse(name = "") +
   scale_x_continuous(name = expression("Alkalinity (mg CaCO"[3]*"/L)"))
 
-p_cond <- water_quality_clean %>% 
+p_cond <- water_chem_clean %>% 
   ggplot(aes(x = cond_umhos, y = depth)) +
   geom_point(size = 1.5) + 
   geom_path(size = 0.75) + 
@@ -289,7 +291,7 @@ p_cond <- water_quality_clean %>%
   scale_y_reverse(name = "Depth (m)") +
   scale_x_continuous(name = "Conductivity (μmhos/cm)", breaks = seq(280, 400, 40))
 
-p_ph <- water_quality_clean %>% 
+p_ph <- water_chem_clean %>% 
   ggplot(aes(x = ph, y = depth)) +
   geom_point(size = 1.5) + 
   geom_path(size = 0.75) + 
@@ -311,7 +313,7 @@ ggsave(plot2, file = "figure2.png", device = "png", type = "cairo")
 
 ### Figure 3 - Temp, NH3, Org-N, NO3
 ```{r fig-3}
-p_nh3 <- water_quality_clean %>% 
+p_nh3 <- water_chem_clean %>% 
   ggplot(aes(x = nh3_mgl, y = depth)) +
   geom_point(size = 1.5) + 
   geom_path(size = 0.75) + 
@@ -322,15 +324,15 @@ p_nh3 <- water_quality_clean %>%
   scale_y_reverse(name = "") +
   scale_x_continuous(name = expression('NH'['3']*'-N (mg/L)'), breaks = seq(0, 2.5, .5))
 
-p_orgn <- water_quality_clean %>% 
-  ggplot(aes(x = org_n_mgl, y = depth)) +
+p_orgn <- water_chem_clean %>% 
+  ggplot(aes(x = orgn_mgl, y = depth)) +
   geom_point(size = 1.5) + 
   geom_path(size = 0.75) + 
   coord_cartesian(xlim = c(0.0, 1.25)) +
   scale_y_reverse(name = "Depth (m)") +
   scale_x_continuous(name = "Org-N (mg/L)", breaks = seq(0.0, 1.25, .25))
 
-p_no3 <- water_quality_clean %>% 
+p_no3 <- water_chem_clean %>% 
   ggplot(aes(x = no3_mgl, y = depth)) +
   geom_point(size = 1.5) + 
   geom_path(size = 0.75) + 
@@ -352,7 +354,7 @@ ggsave(plot3, file = "figure3.png", device = "png", type = "cairo")
 
 ### Figure 4 - Temp, TP, SRP
 ```{r fig-4}
-p_tp <- water_quality_clean %>% 
+p_tp <- water_chem_clean %>% 
   ggplot(aes(x = tp_mgl, y = depth)) +
   geom_point(size = 1.5) + 
   geom_path(size = 0.75) + 
@@ -363,7 +365,7 @@ p_tp <- water_quality_clean %>%
   scale_y_reverse(name = "") +
   scale_x_continuous(name = "TP (mg/L)", breaks = seq(0, 0.15, 0.05))
 
-p_srp <- water_quality_clean %>% 
+p_srp <- water_chem_clean %>% 
   ggplot(aes(x = srp_mgl, y = depth)) +
   geom_point(size = 1.5) + 
   geom_path(size = 0.75) + 
@@ -385,7 +387,7 @@ ggsave(plot4, file = "figure4.png", device = "png", type = "cairo", height = 3.5
 
 ### Figure 5 - Temp, Chla 
 ```{r fig-5}
-p_chla <- water_quality_clean %>% 
+p_chla <- water_chem_clean %>% 
   ggplot(aes(x = chla_ugl, y = depth)) +
   geom_point(size = 1.5) + 
   geom_path(size = 0.75) + 
@@ -597,7 +599,7 @@ ggsave(p_zoop, file = "figure7.png", device = "png", type = "cairo", height = 6,
 
 ### Figure 8 - Light 
 ```{r fig-8}
-p_light <- water_quality_clean %>% 
+p_light <- water_chem_clean %>% 
   ggplot(aes(x = light_level_per, y = depth)) +
   geom_point(size = 1.5) + 
   geom_path(size = 0.75) + 
